--- a/common.props
+++ b/common.props
@@ -1,7 +1,14 @@
 <Project>
-  <PropertyGroup>
-    <LangVersion>latest</LangVersion>
-    <Version>1.0.1</Version>
-    <NoWarn>$(NoWarn);CS1591</NoWarn>
-  </PropertyGroup>
+	<PropertyGroup>
+		<LangVersion>latest</LangVersion>
+		<Version>1.0.1</Version>
+		<Authors>James li</Authors>
+		<Company>James li</Company>
+		<PackageProjectUrl>https://gitee.com/fengwuyan/auto-web-api</PackageProjectUrl>
+		<PackageIcon>logo.png</PackageIcon>
+		<RepositoryUrl>https://gitee.com/fengwuyan/auto-web-api</RepositoryUrl>
+		<RepositoryType>gitee</RepositoryType>
+		<NoWarn>$(NoWarn);CS1591</NoWarn>
+
+	</PropertyGroup>
 </Project>
