--- a/common.props
+++ b/common.props
@@ -1,12 +1,12 @@
 <Project>
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
-		<Version>1.0.4</Version>
+		<Version>1.0.5</Version>
 		<Authors>James li</Authors>
 		<Company>James li</Company>
 		<PackageProjectUrl>https://gitee.com/fengwuyan/auto-web-api</PackageProjectUrl>
 		<PackageIcon>logo.png</PackageIcon>
-		<RepositoryUrl>https://github.com/MapleWithoutWords/auto-web-api</RepositoryUrl>
+		<RepositoryUrl>https://gitee.com/fengwuyan/auto-web-api</RepositoryUrl>
 		<RepositoryType>gitee</RepositoryType>
 		<NoWarn>$(NoWarn);CS1591</NoWarn>
 
