--- a/src/Cike.AutoApi/Cike.AutoApi.csproj
+++ b/src/Cike.AutoApi/Cike.AutoApi.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-	<Import Project="../../common.props"/>
+	<Import Project="../../common.props" />
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
@@ -13,7 +13,16 @@
 		<RepositoryType>$(RepositoryType)</RepositoryType>
 		<Version>$(Version)</Version>
 		<IsPackable>true</IsPackable>
+		<Title>Cike.AutoApi</Title>
+		<Description>The 'Cike.AutoApi' dynamically generates controllers directly based on your business-layer methods, combined with restful specifications.</Description>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Include="..\..\LICENSE">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 
 	<ItemGroup>
 		<None Update="logo.png">
